--- a/styles/base.css
+++ b/styles/base.css
@@ -1,6 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');
-
-
 * {
     margin: 0;
     padding: 0;
@@ -15,8 +12,8 @@ body {
 h1, h2, h3, h4 {
     padding: 1rem;
     text-align: center;
-    font-family:'Courier New', Courier, monospace;
-    font-weight: 700;
+    font-family: "Roboto", sans-serif;
+    font-weight: 400;
 }
 
 header {
