--- a/styles/base.css
+++ b/styles/base.css
@@ -43,7 +43,8 @@ main {
     margin: 2rem .5rem;
     max-width: 100%;
     display: grid;
-    grid-template: 1fr / 1fr auto;
+    gap: 1rem;
+    grid-template-columns: repeat(auto-fit, minmax(300px, auto));
 }
 
 .card, .links {
