--- a/styles/temples.css
+++ b/styles/temples.css
@@ -113,7 +113,7 @@ figcaption {
 }
 
 footer {
-    background-color: rgb(202, 225, 245);
+    background-color: #a3cef1;
     line-height: 1.5rlh;
     font-family: "Roboto", sans-serif;
     font-weight: 300;
