--- a/project/styles/siteplan.css
+++ b/project/styles/siteplan.css
@@ -16,6 +16,9 @@
 .color6 {
     background-color: #e1233c;
 }
+.color7 {
+    background-color: #Ec4D37;
+}
  
 img {
     max-width: 300px;
@@ -30,3 +33,4 @@ img {
     font-weight: 300;
     font-style: normal;
 }
+
