--- a/project/styles/my-health-journal.css
+++ b/project/styles/my-health-journal.css
@@ -210,6 +210,165 @@ footer {
     text-align: center;
 }
 
+/*--------------My Journal HTML-------------- */
+
+.myjournal main{
+   display: grid;
+   margin: 2rem auto;
+   justify-items: center;
+}
+
+.myjournal h1 {
+    grid-area: 1/1/2/2;
+}
+
+/* Paper */
+
+.paper {
+    position: relative;
+    height: 400px;
+    width: 100%;
+    background: rgba(255,255,255,0.9);
+    box-shadow: 0px 0px 6px #636363;
+  }
+
+  .paper::before {
+    content: '';
+    position: absolute;
+    left: 60px;
+    height: 100%;
+    width: 2px;
+    background: rgba(255,0,0,0.4);
+  }
+  
+  .lines {
+    margin-top: 40px;
+    height: calc(100% - 40px);
+    width: 100%;
+    background-image: repeating-linear-gradient(white 0px, white 24px, steelblue 25px);
+  }
+
+  .text {
+    position: absolute;
+    top: 40px;
+    left: 70px;
+    bottom: 0;
+    right: 10px;
+    line-height: 25px;
+    font-family: var(--font1);
+    overflow-y: auto;
+    outline: none;
+  }
+
+  .holes {
+    position: absolute;
+    left: 10px;
+    height: 25px;
+    width: 25px;
+    background: var(--color3);
+    border-radius: 50%;
+    box-shadow: inset 0px 0px 2px 0px #888;
+  }
+
+  .hole-top {
+    top: 10%;
+  }
+
+  .hole-middle {
+    top: 50%;
+  }
+
+  .hole-bottom {
+    bottom: 10%;
+  }
+
+/* Table */
+
+table {
+    width: 100%;
+    border-collapse: collapse;
+}
+
+caption {
+    font-weight: 500;
+    font-size: x-large;
+}
+
+thead {
+    border-bottom: 1px solid black;
+    background-color: rgb(255, 255, 255);
+}
+
+tfoot {
+    border-top: 1px solid black;
+}
+
+th {
+    font-weight: 400;
+}
+
+td, th, tfoot td:nth-of-type(1) {
+    border-left: 1px solid lightgrey;
+}
+
+th:nth-of-type(1), td:nth-of-type(1) {
+    border-left: none;
+}
+
+.macros th{
+    text-align: right;
+    padding-right: 1rem;
+}
+
+
+/* Form */
+.myjournal form {
+    width: 100%;
+    max-width: 450px;
+    margin: 0;
+    max-height: 450px;
+    padding: .5rem 1rem;
+}
+
+.myjournal input, #button {
+    height: 35px;
+}
+
+.myjournal label {
+    padding-top: .5rem;
+}
+
+/* fruits */
+
+.foods {
+    display: flex;
+    width: 100%;
+    justify-content: space-around;
+}
+
+/*-------------- Health tips page --------------*/
+
+.health-tips img {
+    width: 100%;
+    height: auto;
+    box-shadow: 0 0 5px grey;
+}
+
+.health-tips {
+    grid-template-rows: auto;
+}
+
+.health-tips div {
+    padding: .5rem;
+}
+
+.health-tips a:hover {
+    font-weight: 600;
+    text-shadow: 0 0 4px var(--color1);
+}
+
+/* -------------- @media -------------- */
+
 /* very small screen */
 @media only screen and (max-width: 450px) {
     main, .myjournal main {
@@ -355,161 +514,4 @@ footer {
     }
 
 
-}
-
-/* My Journal HTML */
-
-.myjournal main{
-   display: grid;
-   margin: 2rem auto;
-   justify-items: center;
-}
-
-.myjournal h1 {
-    grid-area: 1/1/2/2;
-}
-
-/* Paper */
-
-.paper {
-    position: relative;
-    height: 400px;
-    width: 100%;
-    background: rgba(255,255,255,0.9);
-    box-shadow: 0px 0px 6px #636363;
-  }
-
-  .paper::before {
-    content: '';
-    position: absolute;
-    left: 60px;
-    height: 100%;
-    width: 2px;
-    background: rgba(255,0,0,0.4);
-  }
-  
-  .lines {
-    margin-top: 40px;
-    height: calc(100% - 40px);
-    width: 100%;
-    background-image: repeating-linear-gradient(white 0px, white 24px, steelblue 25px);
-  }
-
-  .text {
-    position: absolute;
-    top: 40px;
-    left: 70px;
-    bottom: 0;
-    right: 10px;
-    line-height: 25px;
-    font-family: var(--font1);
-    overflow-y: auto;
-    outline: none;
-  }
-
-  .holes {
-    position: absolute;
-    left: 10px;
-    height: 25px;
-    width: 25px;
-    background: var(--color3);
-    border-radius: 50%;
-    box-shadow: inset 0px 0px 2px 0px #888;
-  }
-
-  .hole-top {
-    top: 10%;
-  }
-
-  .hole-middle {
-    top: 50%;
-  }
-
-  .hole-bottom {
-    bottom: 10%;
-  }
-
-/* Table */
-
-table {
-    width: 100%;
-    border-collapse: collapse;
-}
-
-caption {
-    font-weight: 500;
-    font-size: x-large;
-}
-
-thead {
-    border-bottom: 1px solid black;
-    background-color: rgb(255, 255, 255);
-}
-
-tfoot {
-    border-top: 1px solid black;
-}
-
-th {
-    font-weight: 400;
-}
-
-td, th, tfoot td:nth-of-type(1) {
-    border-left: 1px solid lightgrey;
-}
-
-th:nth-of-type(1), td:nth-of-type(1) {
-    border-left: none;
-}
-
-.macros th{
-    text-align: right;
-    padding-right: 1rem;
-}
-
-
-/* Form */
-.myjournal form {
-    width: 100%;
-    max-width: 450px;
-    margin: 0;
-    max-height: 450px;
-    padding: .5rem 1rem;
-}
-
-.myjournal input, #button {
-    height: 35px;
-}
-
-.myjournal label {
-    padding-top: .5rem;
-}
-
-/* fruits */
-
-.foods {
-    display: flex;
-    width: 100%;
-    justify-content: space-around;
-}
-
-/* Health tips page */
-
-.health-tips img {
-    width: 100%;
-    height: auto;
-    box-shadow: 0 0 5px grey;
-}
-
-.health-tips {
-    grid-template-rows: auto;
-}
-
-.health-tips div {
-    padding: .5rem;
-}
-
-.health-tips a:hover {
-    font-weight: 600;
-    text-shadow: 0 0 4px var(--color1);
 }
